# triememfs

./: .gitignore  LICENSE  MANIFEST.in  README.md  generate_coverage.bat  pyproject.toml
trie_memfs/: __init__.py  benchmarks.ipynb  trie_memory_fs.py
trie_memfs/test/: trie_memory_fs_fixtures.py  trie_memory_fs_test.py
